<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/backup_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="24dp">

                <TextView
                    style="@style/TextAppearance.Guofeng.Footnote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/backup_save" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_ios_group"
                    android:orientation="vertical">

                    <com.haleydu.cimoc.ui.widget.preference.CheckBoxPreference
                        android:id="@+id/backup_save_comic_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_save_comic_auto_summary"
                        app:title="@string/backup_save_comic_auto" />

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_save_comic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_save_comic_summary"
                        app:title="@string/backup_save_comic" />

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_save_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:summary="@string/backup_save_tag_summary"
                        app:title="@string/backup_save_tag" />

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_save_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_save_settings_summary"
                        app:title="@string/backup_save_settings" />
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.Guofeng.Footnote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/backup_restore" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_ios_group"
                    android:orientation="vertical">

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_restore_comic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_restore_comic_summary"
                        app:title="@string/backup_restore_comic" />

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_restore_tag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:summary="@string/backup_restore_tag_summary"
                        app:title="@string/backup_restore_tag" />

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_restore_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_restore_settings_summary"
                        app:title="@string/backup_restore_settings" />
                </LinearLayout>

                <TextView
                    style="@style/TextAppearance.Guofeng.Footnote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/backup_clear" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_ios_group"
                    android:orientation="vertical">

                    <com.haleydu.cimoc.ui.widget.Option
                        android:id="@+id/backup_clear_record"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:summary="@string/backup_clear_record_summary"
                        app:title="@string/backup_clear_record" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <include layout="@layout/custom_night_mask" />
</FrameLayout>
